@@ -8,8 +8,11 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.authorisation.validators.ServiceAuthTokenValidator;
 import uk.gov.hmcts.reform.wataskmanagementapi.auth.access.entities.AccessControlResponse;
 import uk.gov.hmcts.reform.wataskmanagementapi.auth.idam.entities.UserInfo;
+import uk.gov.hmcts.reform.wataskmanagementapi.config.ClientAccessProperties;
 
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -23,6 +26,8 @@ class ClientAccessControlServiceTest {
     private static final String SERVICE_AUTH_TOKEN = "some serviceAuthorizationToken";
     private static final String PRIVILEGED_ACCESS_SERVICE_NAME = "somePrivilegedServiceName";
     private static final String EXCLUSIVE_ACCESS_SERVICE_NAME = "someExclusiveServiceName";
+    private static final String UNRESTRICTED_EXCLUSIVE_ACCESS_SERVICE_NAME = "someUnrestrictedExclusiveServiceName";
+    private static final String CASE_TYPE_ID = "someCaseTypeId";
     private static final String USER_ID = "someUserId";
     private static final String EMAIL = "test@test.com";
     @Mock
@@ -43,11 +48,18 @@ class ClientAccessControlServiceTest {
         lenient().when(userInfo.getEmail())
             .thenReturn(EMAIL);
 
-        clientAccessControlService = new ClientAccessControlService(
-            serviceAuthTokenValidator,
-            Collections.singletonList(PRIVILEGED_ACCESS_SERVICE_NAME),
-            Collections.singletonList(EXCLUSIVE_ACCESS_SERVICE_NAME)
-        );
+        ClientAccessProperties clientAccessProperties = new ClientAccessProperties();
+        clientAccessProperties.setPrivilegedAccessClients(Collections.singletonList(PRIVILEGED_ACCESS_SERVICE_NAME));
+        clientAccessProperties.setExclusiveAccessClients(List.of(
+            EXCLUSIVE_ACCESS_SERVICE_NAME,
+            UNRESTRICTED_EXCLUSIVE_ACCESS_SERVICE_NAME
+        ));
+        clientAccessProperties.setServiceCaseTypeAccess(Map.of(
+            EXCLUSIVE_ACCESS_SERVICE_NAME,
+            List.of(CASE_TYPE_ID)
+        ));
+
+        clientAccessControlService = new ClientAccessControlService(serviceAuthTokenValidator, clientAccessProperties);
     }
 
     @Test
@@ -130,6 +142,53 @@ class ClientAccessControlServiceTest {
             .isInstanceOf(NullPointerException.class)
             .hasMessage("ServiceAuthorization must not be null");
 
+    }
+
+    @Test
+    void hasExclusiveCaseTypeAccess_should_return_true_if_service_has_case_type_access() {
+        when(serviceAuthTokenValidator.getServiceName(SERVICE_AUTH_TOKEN))
+            .thenReturn(EXCLUSIVE_ACCESS_SERVICE_NAME);
+
+        boolean result = clientAccessControlService.hasExclusiveCaseTypeAccess(SERVICE_AUTH_TOKEN, CASE_TYPE_ID);
+
+        assertTrue(result);
+    }
+
+    @Test
+    void hasExclusiveCaseTypeAccess_should_return_false_if_service_is_not_exclusive() {
+        when(serviceAuthTokenValidator.getServiceName(SERVICE_AUTH_TOKEN))
+            .thenReturn("anotherService");
+
+        boolean result = clientAccessControlService.hasExclusiveCaseTypeAccess(SERVICE_AUTH_TOKEN, CASE_TYPE_ID);
+
+        assertFalse(result);
+    }
+
+    @Test
+    void hasExclusiveCaseTypeAccess_should_return_true_if_exclusive_service_has_no_case_type_restrictions() {
+        when(serviceAuthTokenValidator.getServiceName(SERVICE_AUTH_TOKEN))
+            .thenReturn(UNRESTRICTED_EXCLUSIVE_ACCESS_SERVICE_NAME);
+
+        boolean result = clientAccessControlService.hasExclusiveCaseTypeAccess(SERVICE_AUTH_TOKEN, "anotherCaseType");
+
+        assertTrue(result);
+    }
+
+    @Test
+    void hasExclusiveCaseTypeAccess_should_return_false_if_restricted_service_has_no_case_type_match() {
+        when(serviceAuthTokenValidator.getServiceName(SERVICE_AUTH_TOKEN))
+            .thenReturn(EXCLUSIVE_ACCESS_SERVICE_NAME);
+
+        boolean result = clientAccessControlService.hasExclusiveCaseTypeAccess(SERVICE_AUTH_TOKEN, "anotherCaseType");
+
+        assertFalse(result);
+    }
+
+    @Test
+    void hasExclusiveCaseTypeAccess_should_return_false_if_case_type_is_blank() {
+        boolean result = clientAccessControlService.hasExclusiveCaseTypeAccess(SERVICE_AUTH_TOKEN, " ");
+
+        assertFalse(result);
     }
 
     @Test
